--- a/index.html
+++ b/index.html
@@ -1397,7 +1397,7 @@
               <p
                 class="font-mono text-dark-text/70 text-base md:text-lg tracking-widest"
               >
-                0x2eDdAC071732A52aB2CBfa2D5FD89df4381f7F4a
+                0xComingSoon
               </p>
               <span
                 class="ml-4 rounded-lg p-2 bg-peach-orange/10 border border-peach-orange/20 pointer-events-none transition-colors text-peach-orange group-hover:bg-peach-orange/20"
