--- a/index.html
+++ b/index.html
@@ -253,11 +253,11 @@
         ><a
           href="#tiktok"
           class="text-white font-semibold transition-colors md:pb-1 md:border-b-2 md:border-transparent md:hover:border-white"
-          >TikTok</a
+          >Telegram</a
         ><a
           href="#media"
           class="text-white font-semibold transition-colors md:pb-1 md:border-b-2 md:border-transparent md:hover:border-white"
-          >Media</a
+          >X</a
         ><a
           href="#faq"
           class="text-white font-semibold transition-colors md:pb-1 md:border-b-2 md:border-transparent md:hover:border-white"
